# -dikson-ai-system

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
app/: agent_api.py  agent_service.py  config.py  documentation_api.py  documentation_service.py  git_api.py  git_service.py  graph_service.py  main.py  memory.py  memory_service.py  planning_api.py  planning_service.py  research.py  research_api.py  research_service.py  search_service.py  storage.py  task_api.py  task_service.py  wiki_service.py
dikson_li/: __init__.py  agents.py  cli.py  config.py  documentation.py  git_automation.py  graph.py  memory.py  planning.py  research.py  search.py  tasks.py  wiki.py
docs/: AGENT_FRAMEWORK.md  AGENT_PROTOCOL.md  ARCHITECTURE.md  DIKSON_WIKI_ARCHITECTURE.md  DOCUMENTATION_GENERATOR.md  GIT_AUTOMATION.md  KNOWLEDGE_GRAPH.md  PLANNING_SYSTEM.md  RESEARCH_ENGINE.md  SEMANTIC_SEARCH.md  TASK_QUEUE.md  UNIFIED_ARCHITECTURE.md
tests/: test_agent_api.py  test_agents.py  test_api.py  test_cli_memory.py  test_documentation.py  test_documentation_api.py  test_git_api.py  test_git_automation.py  test_graph.py  test_graph_api.py  test_memory.py  test_planning.py  test_planning_api.py  test_research.py  test_research_api.py  test_search.py  test_search_api.py  test_task_api.py  test_tasks.py  test_wiki.py  test_wiki_api.py
wiki/: agent-framework.md  documentation-generator.md  git-automation.md  knowledge-graph.md  memory-api.md  planning-system.md  research-engine.md  semantic-search.md  task-queue.md  unified-memory-core.md  wiki-crud.md
