[project]
name = "dikson-ai-system"
version = "0.1.0"
description = "Local project memory and research assistant powered by OpenAI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "openai>=1.97,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "pypdf>=5.8,<6",
  "python-docx>=1.2,<2",
  "pyyaml>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "httpx>=0.28,<1",
  "ruff>=0.12,<1"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
