[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dikson-ai-system"
version = "0.8.0"
description = "Local project memory and research assistant powered by OpenAI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "openai>=1.97,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "pypdf>=5.8,<6",
  "python-docx>=1.2,<2",
  "pyyaml>=6.0,<7",
  "filelock>=3.18,<4"
]

[project.scripts]
dikson-li = "dikson_li.cli:main"

[tool.setuptools]
packages = ["app", "dikson_li"]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "httpx>=0.28,<1",
  "ruff>=0.12,<1"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
